--- a/portfolio.html
+++ b/portfolio.html
@@ -49,55 +49,99 @@
                     <li class="portfolio-first-list-item"><button class="portfolio-first-list-button">Маркетинг</button></li>
                 </ul>   
                 <ul class="portfolio-second-main-list list">
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-0.jpg" alt="Технокряк" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-0.jpg" alt="Технокряк" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Технокряк</h3>
                             <p class="portfolio-list-text-second">Веб-сайт</p>
                         </div>
-                    </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-1.jpg" alt="Постер New Orlean vs Golden Star" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                         <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-1.jpg" alt="Постер New Orlean vs Golden Star" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Постер New Orlean vs Golden Star</h3>
                             <p class="portfolio-list-text-second">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-2.jpg" alt="Ресторан Seafood" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-2.jpg" alt="Ресторан Seafood" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Ресторан Seafood</h3>
                             <p class="portfolio-list-text-second">Приложение</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-3.jpg" alt="Проект Prime" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-3.jpg" alt="Проект Prime" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Проект Prime</h3>
                             <p class="portfolio-list-text-second">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-4.jpg" alt="PПроект Boxes" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-4.jpg" alt="PПроект Boxes" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Проект Boxes</h3>
                             <p class="portfolio-list-text-second">Приложение</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-5.jpg" alt="Inspiration has no Borders" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-5.jpg" alt="Inspiration has no Borders" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Inspiration has no Borders</h3>
                             <p class="portfolio-list-text-second">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-6.jpg" alt="Издание Limited Edition" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-6.jpg" alt="Издание Limited Edition" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Издание Limited Edition</h3>
                             <p class="portfolio-list-text-second">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-7.jpg" alt="Проект LAB" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-7.jpg" alt="Проект LAB" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Проект LAB</h3>
                             <p class="portfolio-list-text-second">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-second-main-list-group"><a href=""><img src="img/img1-8.jpg" alt="Growing Business" width="370"></a>
+                    <li class="portfolio-second-main-list-group">
+                        <div class="portfolio-img-text-wrap">
+                            <a href=""><img src="img/img1-8.jpg" alt="Growing Business" width="370"></a>
+                            <p class="portfolio-img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                                это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-second-main-list-tt">
                             <h3 class="portfolio-list-text-first">Growing Business</h3>
                             <p class="portfolio-list-text-second">Приложение</p>
