--- a/index.html
+++ b/index.html
@@ -94,9 +94,24 @@
             <div class="container">
                 <h2 class="third-main-title">Чем мы занимаемся</h2>
                 <ul class="third-main-list list">
-                    <li class="third-main-list-title"><img src="img/box1.jpg" alt="рука клава" width="370"></li>
-                    <li class="third-main-list-title"><img src="img/box2.jpg" alt="рука телефон" width="370"></li>
-                    <li class="third-main-list-title"><img src="img/box3.jpg" alt="рука плаешет" width="370"></li>
+                    <li class="third-main-list-title">
+                        <div class="third-main-img-text">
+                            <img class="third-main-list-title-img" src="img/box1.jpg" alt="рука клава" width="370">
+                            <p class="third-main-list-title-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+                        </div>
+                    </li>
+                    <li class="third-main-list-title">
+                            <div class="third-main-img-text">
+                            <img class="third-main-list-title-img" src="img/box2.jpg" alt="рука телефон" width="370">
+                        <p class="third-main-list-title-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+                        </div>
+                    </li>
+                    <li class="third-main-list-title">
+                        <div class="third-main-img-text">
+                            <img class="third-main-list-title-img" src="img/box3.jpg" alt="рука плаешет" width="370">
+                            <p class="third-main-list-title-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
