--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 <nav class="header-navgation">
                     <ul class='first-header-list list'>
                         <li class="header-item"><a class="header-link-second link" href="./index.html">Студия</a></li>
-                        <li class="header-item"><a class="header-link-first link" href=".">Портфолио</a></li>
+                        <li class="header-item"><a class="header-link-first link" href="./portfolio.html">Портфолио</a></li>
                         <li class="header-item"><a class="header-link-second link" href="">Контакты</a></li>
                     </ul>
                 </nav>
